# Recapit

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE_NOTES.md  gemini-api-docs.md  install  main.py  pyproject.toml  response.txt  run.py  slide-template.txt  test.tex  todo.md
docs/: TODO.md
lecture_summarizer/: __init__.py  api.py  clean.py  cli.py  config.py  constants.py  costs.py  llm.py  pdf.py  pipeline.py  rate_limiter.py  telemetry.py  templates.py  utils.py  video.py
lecture_summarizer/core/: __init__.py  (+2 more)
man/: recapit.1
model-syntax/: flash.py  imagegen.py  thinking.py
prompts/: lecture-prompt-latex.txt  slide-prompt-latex.txt  video-prompt-latex.txt  video-prompt.txt
recapit/: api.py  cli.py  config.py  constants.py  llm.py  pdf.py  pricing.yaml  quota.py  rate_limiter.py  telemetry.py  video.py
src/: cli.rs  config.rs  constants.rs  conversion.rs  core.rs  cost.rs  engine.rs  main.rs  pdf.rs  progress.rs  prompts.rs  quota.rs  selection.rs  telemetry.rs  templates.rs  tui.rs  utils.rs  video.rs
templates/: document-latex-template.txt  document-prompt-latex.txt  document-prompt.txt  document-template.txt  image-prompt-latex.txt  image-prompt.txt  latex-to-md-template.txt  lecture-latex-template.txt  lecture-prompt.txt  lecture-template.txt  slide-prompt-latex.txt  slide-prompt.txt  slide-template.txt  video-latex-template.txt  video-prompt-latex.txt  video-prompt.txt  video-template.txt
tests/: conftest.py  test_concurrency.py  test_engine_architecture.py  test_ingest.py  test_provider_gemini.py  test_rate_limiter.py  test_telemetry_costs.py  test_templates.py  test_video_encoders.py
utils/: document-template.txt  image-template.txt
(+85 files in other folders)
