[package]
name = "recapit"
version = "0.6.1"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "multipart", "stream", "gzip", "brotli", "deflate", "blocking"] }
bytes = "1"
mime = "0.3"
mime_guess = "2"
glob = "0.3"
rayon = "1"
url = "2"
regex = "1"
which = "6"
tempfile = "3"
sha2 = "0.10"
hex = "0.4"
humantime = "2"
bytesize = "1.3"
ratatui = "0.27"
crossterm = "0.27"
walkdir = "2"
time = { version = "0.3", features = ["parsing", "formatting", "macros", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dirs = "5"
base64 = "0.22"
jsonwebtoken = { version = "9", default-features = false, features = ["use_pem"] }
rand = "0.8"
