[project]
license = "GPL-3.0-or-later"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Text Processing :: General",
]
name = "lecture-summarizer"
version = "0.7.0"
requires-python = ">=3.10"
dependencies = [
  "rich>=13.7",
  "natsort>=8.4",
  "pdf2image>=1.17",
  "PyPDF2>=3.0",
  "pillow>=10.0",
  "pillow-avif-plugin>=1.4",
  "typer>=0.12",
  "google-genai>=0.2",
]

[project.scripts]
lecture-summarizer = "lecture_summarizer.cli:main"

[tool.setuptools]
packages = ["lecture_summarizer"]
